--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ body{
 	height: 400px;
 	padding-top: 400px;
 	float: left;
-	background-image: url(file://C:/Users/vutie/OneDrive/Desktop/BaiTapHTML/Spotify/img/background_img.jpg);
+	background-image: url(https://github.com/vutiendung2205/dungvutien2201-project1/blob/master/img/background_img.jpg);
 	background-size: cover;
 	background-position: center;
 	color: white;
